Closed
Bug 1289670
Opened 10 years ago
Closed 10 years ago
Flash ask to activate does not work on areena.yle.fi
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox49 unaffected, firefox50+ fixed)
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | unaffected |
| firefox50 | + | fixed |
People
(Reporter: 6lobe, Assigned: blassey)
References
Details
(Keywords: regression, Whiteboard: nightly-community)
Attachments
(1 file)
|
6.42 KB,
patch
|
mrbkap
:
review+
|
Details | Diff | Splinter Review |
Firefox does not offer to activate Flash when trying to watch videos on YLE Areena after bug 1186948 landed.
Test: http://areena.yle.fi/1-2037581
Comment 1•10 years ago
|
||
[Tracking Requested - why for this release]: Regression
Status: UNCONFIRMED → NEW
status-firefox49:
--- → unaffected
status-firefox50:
--- → affected
tracking-firefox50:
--- → ?
Ever confirmed: true
Flags: needinfo?(blassey.bugs)
Updated•10 years ago
|
Severity: normal → major
| Assignee | ||
Comment 3•10 years ago
|
||
This is checking navigator.mimetypes instead of navigator.plugins. I thought this case was covered, but apparently not. Will dig in further
Flags: needinfo?(blassey.bugs)
| Assignee | ||
Comment 4•10 years ago
|
||
Assignee: nobody → blassey.bugs
Attachment #8775337 -
Flags: review?(blassey.bugs)
| Assignee | ||
Updated•10 years ago
|
Attachment #8775337 -
Flags: review?(blassey.bugs) → review?(mrbkap)
Updated•10 years ago
|
Attachment #8775337 -
Flags: review?(mrbkap) → review+
Pushed by blassey@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/312eafb1465b
Show plugin activation icon when navigator.mimetypes is queried r=mrbkap
Comment 6•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Comment 7•10 years ago
|
||
This is still an issue.
Comment 8•9 years ago
|
||
This is indeed still reproducible (50.0b4-build1), if I got this right from the information available here and in Bug 1290474.
With Flash set to "Ask to Activate" from about:addons#plugins, http://areena.yle.fi/1-2037581 is _not_ displaying the expected infobar (i.e. Allow <url> to run "Adobe Flash"? | Continue Blocking | Allow...) and it's also _not_ displaying the plug-in icon in the Location Bar.
Clicking the play button will instead display the "Activate Adobe Flash." overlay instead.
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•