bug 1289670 - Show plugin activation icon when navigator.mimetypes is queried r=mrbkap